# eldraw

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  cliff.toml  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.mjs  fetch-pdfium.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/pdfium/: README.md
src-tauri/src/: error.rs  export.rs  lib.rs  main.rs  model.rs  page_cache.rs  pdf.rs  presenter.rs  session.rs  sidebar_window.rs  slides.rs  state.rs  storage.rs  thumbnails.rs
src/lib/: color.ts  log.ts  types.ts
src/routes/: +layout.svelte  (+1 more)
tests/: angle-mark.test.ts  autosave.test.ts  bg-sample.test.ts  catmull-rom.test.ts  command-fuzzy.test.ts  command-reload.test.ts  command-store.test.ts  config-export.test.ts  config-import.test.ts  cursors.test.ts  document-mutation.test.ts  document-store.test.ts  eraser-batch.test.ts  eraser-hit-test.test.ts  eraser.test.ts  graph-axes.test.ts  graph-parser.test.ts  graph-plotter.test.ts  graph-render.test.ts  graph-theme.test.ts  history.test.ts  implicit.test.ts  laser.test.ts  latex-render.test.ts  line-snap.test.ts  live-layer-batching.test.ts  page-ops.test.ts  parser-xy.test.ts  pdf-loader.test.ts  pdf-reload.test.ts  pdf-store.test.ts  presenter-mirror.test.ts  presenter-store.test.ts  presenter.test.ts  protractor.test.ts  ruler-overlay.test.ts  ruler.test.ts  select-geometry.test.ts  select-hittest.test.ts  select-ops.test.ts  (+34 more)
(+133 files in other folders)
