[package]
name = "eldraw"
version = "0.1.0-rc.4"
description = "PDF annotation tool for live math teaching"
authors = ["Adam"]
edition = "2021"

[lib]
name = "eldraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
pdfium-render = { version = "0.9", default-features = false, features = [
  "pdfium_latest",
  "image_latest",
  "image_api",
  "thread_safe",
] }
image = "0.25"
tauri-plugin-dialog = "2.7.0"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
